--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
-          scp -i key.pem deploy.zip $EC2_USER@$EC2_HOST:/home/$EC2_USER/
+          scp -i ${{ secrets.EC2_SSH_KEY }} deploy.zip $EC2_USER@$EC2_HOST:/home/$EC2_USER/
 
       - name: SSH into EC2 and unzip package
         env:
