fix : remove stocks from list once alert is sent

--- a/.env.info
+++ b/.env.info
@@ -1,3 +1,9 @@
 # Email configuration
 EMAIL_HOST_USER=""
 EMAIL_HOST_PASSWORD=""
+
+
+# Enable testing mode (True/False)
+# When set to "True", only accepts testing emails and bypasses client emails for sending alerts.
+# Use this setting for development environments to avoid sending emails to clients.
+TESTING=True
